ant design dark mode and some style fix

--- a/src/components/HomeComponent/HomeComponent.scss
+++ b/src/components/HomeComponent/HomeComponent.scss
@@ -1,33 +1,56 @@
+.page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
 .filter-container {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
-  gap: 100px;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
 
-  @media (max-width: 500px) {
-    flex-direction: column;
+  @media (max-width: 768px) {
+    flex-direction: column; // Mobil görünümde alt alta gelsin
+    align-items: stretch;
   }
 
-  .search-container {
+  .search-container,
+  .category-container {
     flex: 1;
+    margin: 10px;
+
+    @media (max-width: 768px) {
+      margin: 10px 0; // Mobilde sağ ve soldan mesafeyi kaldır
+    }
   }
 
   .category-container {
-    flex: 1;
+    text-align: right; // Sağda hizalanmasını sağlamak için
+
+    @media (max-width: 768px) {
+      text-align: left; // Mobilde sola hizala
+    }
   }
 }
 
 .grid-container {
+  width: 100%; // Konteynerin genişliğini tam genişlik yapın
   display: flex;
   justify-content: center;
+  padding: 0 20px; // Sağ ve soldan uzaklık için padding ekleyin
 
   .card-container {
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    gap: 100px;
+    gap: 20px;
 
-    @media (max-width: 500px) {
-      grid-template-columns: 1fr;
+    @media (max-width: 768px) {
+      grid-template-columns: 1fr; // Mobilde tek sütun
     }
   }
 }
